// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockAccountButton should not block and delete buttons when user type is staff 1`] = `
<div>
  <div
    class="buttonsContainer"
  >
    <a
      class="btn btn-primary"
      href="/chats/undefined"
    >
      Wyślij wiadomość
    </a>
  </div>
</div>
`;

exports[`BlockAccountButton should render disabled buttons when user status is blocked 1`] = `
<div>
  <div
    class="buttonsContainer"
  >
    <button
      class="btn btn-primary"
      disabled=""
      type="button"
    >
      Wyślij wiadomość
    </button>
    <button
      disabled=""
    >
      BlockAccountButton
    </button>
    <button
      disabled=""
    >
      DeleteAccountButton
    </button>
  </div>
</div>
`;

exports[`BlockAccountButton should render without crashing 1`] = `
<div>
  <div
    class="buttonsContainer"
  >
    <a
      class="btn btn-primary"
      href="/chats/undefined"
    >
      Wyślij wiadomość
    </a>
    <button>
      BlockAccountButton
    </button>
    <button>
      DeleteAccountButton
    </button>
  </div>
</div>
`;
